--- a/pemrograman-python/isi/02-06-modul-conda.adoc
+++ b/pemrograman-python/isi/02-06-modul-conda.adoc
@@ -2,107 +2,69 @@
 
 === Modul Standar
 
-Python menyediakan berbagai macam fungsi dan modul standar yang bisa dipakai langsung tanpa perlu menggunakan pustaka pihak ketiga. Modul standar selengkapnya bisa dilihat di https://docs.python.org/3/library/index.html.
+Python menyediakan berbagai macam fungsi dan modul standar yang bisa dipakai langsung tanpa perlu menggunakan pustaka pihak ketiga. Modul standar selengkapnya bisa dilihat di https://docs.python.org/3/library/index.html. Istilah lain untuk modul standar ini adalah *pustaka standar*, *standard library*, *builtin functions*, dan *fungsi bawaan Python*. Saat melakukan instalasi interpreter Python, modul standar ini sudah bisa langsung digunakan dengan setelah sebelumnya mendekralasikan penggunakan modul tersebut menggunakan perintah *import*.
+
+[source,python]
+.src/02-06/01-modul-standar.py
+----
+include::../{sourcedir}/02-06/01-modul-standar.py[]
+----
+
+Jika dijalankan dari command line / shell:
+
+[source,shell]
+----
+include::../{sourcedir}/02-06/01-modul-standar.txt[]
+----
 
 === Modul yang Didefinisikan Pemakai (User Defined Module)
 	
 Kumpulan fungsi (dan nantinya class) yang sudah dibuat bisa disimpan dalam suatu file dan digunakan sebagai modul. Modul sering juga disebut sebagai paket (package). Modul ini berguna untuk reusable code. 
-
-[,python]
+[source,python]
+.src/02-06/modul02.py
 ----
-# modul-01.py 
- 
-def penambah(*args):
-    total = 0
-    for op in args:
-        total += op
-    return total
- 
-# jika di-import, maka __name__ berisi nama modul yaitu 
-# namafile.py
-# jika dijalankan dari shell / command line, maka 
-# __name__ akan berisi '__main__'
-# jadi, di bawah ini tidak akan dijalankan jika di-import
-if __name__ == '__main__':
-    print(penambah(32,43,12))
+include::../{sourcedir}/02-06/modul02.py[]
 ----
 
 Jika dipanggil dari command line / shell:
 
-[,python]
+[source,shell]
 ----
-» python modul01.py 
-87
+include::../{sourcedir}/02-06/modul02.txt[]
 ----
 
 Jika di-import:
 
-[,shell]
+[source,shell]
 ----
-# pthon 
-» python
-Python 3.7.1 (default, Oct 22 2018, 10:41:28) 
-[GCC 8.2.1 20180831] on linux
-Type "help", "copyright", "credits" or "license" for more information.
->>> import modul01
->>> modul01.penambah(12,23,12,32)
-79
->>> 
+include::../{sourcedir}/02-06/modul02-import.txt[]
 ----
 
-Saat menemui perintah import modul01, python akan mencari isi dari modul standar. Jika tidak ada, maka akan dicari modul01.py pada:
+Saat menemui perintah *import modul02*, python akan mencari isi dari modul standar. Jika tidak ada, maka akan dicari modul02.py pada:
 
 * Direktori aktif saat itu
 * Isi dari $PYTHONPATH
-* Isi dari sys.path:
+* Isi dari sys.path
 
-[,python]
+[source,shell]
 ----
->>> import sys
->>> sys.path
-['', '/usr/lib/python37.zip', '/usr/lib/python3.7', '/usr/lib/python3.7/lib-dynload', '/usr/lib/python3.7/site-packages']
->>> 
+include::../{sourcedir}/02-06/searchmodulepath.txt[]
 ----
 
 === pip
 
 Python menyediakan perintah untuk mengelola pustaka pihak ketiga jika pemrogram ingin menggunakan berbagai pustaka tersebut untuk keperluan tugas pemrograman yang diberikan ke pemrogram. Secara default, perintah yang digunakan adalah pip.
 
-[,shell]
+[source,shell]
 ----
-» pip list
-Package                  Version   
------------------------- ----------
-alabaster                0.7.11    
-anytree                  2.4.3     
-appdirs                  1.4.3     
-Babel                    2.6.0     
-backcall                 0.1.0     
-Brlapi                   0.6.7     
-btrfsutil                1.0.0     
-CacheControl             0.12.5    
-chardet                  3.0.4     
-colorama                 0.4.1     
-decorator                4.3.0     
-distlib                  0.2.8     
-distro                   1.3.0     
-docutils                 0.14      
-greenlet                 0.4.15    
-html5lib                 1.0.1 
-...
-...
+include::../{sourcedir}/02-06/piplist.txt[]
 ----
 
 Untuk menginstall paket, gunakan:
 
-[,shell]
+[source,shell]
 ----
-» pip install jupyter
-Collecting jupyter
-  Using cached https://files.pythonhosted.org/packages/83/df/0f5dd132200728a86190397e1ea87cd76244e42d39ec5e88efd25b2abd7e/jupyter-1.0.0-py2.py3-none-any.whl
-Collecting ipywidgets (from jupyter)
-...
-...
+include::../{sourcedir}/02-06/pipinstall.txt[]
 ----
 
 pip masih mempunyai banyak opsi, silahkan melihat menggunakan perintah pip --help.
@@ -111,18 +73,23 @@ pip masih mempunyai banyak opsi, silahkan melihat menggunakan perintah pip --hel
 
 Conda merupakan pengelola paket dan lingkungan Python yang dibuat oleh Anaconda, Inc. Hampir mirip dengan pip, hanya saja paket yang ada merupakan paket yang sudah diaudit dan dikelola dengan baik oleh Anaconda, Inc. Untuk mengelola paket, berikut adalah beberapa perintah dasar dari conda:
 
-[,shell]
+[source,shell]
 ----
-conda list => daftar paket yang sudah terinstall
-conda install x => install paket x
-conda remove x => uninstall paket x
-conda update x => update paket x
-conda update --all  => update semua paket
+include::../{sourcedir}/02-06/conda-pkg.txt[]
 ----
+<1> daftar paket yang sudah terinstall
+<2> install paket x
+<3> uninstall paket x
+<4> update paket x
+<5> update semua paket
 
 Selain mengelola paket, conda juga bisa digunakan untuk mengelola lingkungan karena seringkali pemrogram memerlukan python versi tertentu yang berbeda dengan yang telah diinstall (baik di level sistem operasi maupun di conda/anaconda). Berikut ini adalah beberapa perintah yang bisa digunakan untuk mengelola environment:
 
-* conda env list => melihat env apa saja yang ada
-* conda activate nama-env => mengaktifkan environment
-* conda create -p /home/bpdp/py36 python=3.6 => membuat environment dengan versi Python tertentu
-
+[source,shell]
+----
+include::../{sourcedir}/02-06/conda-env.txt[]
+----
+<1> membuat env dengan nama py311-utdi
+<2> melihat env apa saja yang ada
+<3> mengaktifkan environment
+<4> membuat environment pada direktori tertentu, dengan versi Python tertentu
